--- a/daltadka.css
+++ b/daltadka.css
@@ -8,7 +8,7 @@
 
 body {
   background: #1a1a1a;
-  color: #f8d6e0;
+  color: #ffffff;
   line-height: 1.6;
   padding: 20px;
 }
@@ -67,7 +67,7 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   position: relative;
   margin-bottom: 30px;
 }
@@ -99,7 +99,7 @@ body {
   font-size: 1.3rem;
   font-weight: 400;
   margin-top: 10px;
-  color: #ffe9f7;
+  color: #ffffff;
 }
 
 /* Recipe info */
